# $Id$

Griffith ChangeLog
------------------
(c) 2005-2006 Vasco Nunes

2006-03-04 Piotr Ozarowski <ozarow@gmail.com>
	* Fixed displaing movie info before initialization (tags problem)

2006-03-03 Vasco Nunes <vasco.m.nunes@gmail.com>
	* IMDB changed the way posters are included in html. Plugin fixed.
	* Added custom fonts selection for PDF reports.
	* Fixed bug when adding new collections.

2006-03-03 Piotr Ozarowski <ozarow@gmail.com>
	* New tag/language/volume/collection name must be unique
	* Volume/collection ids dictionary is filled only if needed
	* Changed behaviour of poster preview and add movie window
	* Fixed bug when restoring data
	* Removal of any movie language is now possible (not just last one)
	* Stopklatka movie plugin updated
	* Onet Film movie plugin updated

2006-03-01 Vasco Nunes <vasco.m.nunes@gmail.com>
	* French and portuguese translations updated to match current revision
	* Added a new french movie plugin - Allocine (Thanks to Pierre-Luc Lévy)

2006-02-28 Piotr Ozarowski <ozarow@gmail.com>
	* All *\.py files moved to usr/share/ directory

2006-02-28 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Added french translation (Thanks to Pierre-Luc Lévy)

2006-02-26 Piotr Ozarowski <ozarow@gmail.com>
	* Movie now can't be deleted while it is loaned

2006-02-25 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Fixed problem under macosx and safari not opening websites fired up by griffith
	* Removed loan flag from the main treeview.

2006-02-21 Piotr Ozarowski <ozarow@gmail.com>
	* New entries in help menu
	* Worning if languages list is not filled

2006-02-20 Piotr Ozarowski <ozarow@gmail.com>
	* New 'tag' feature is now complete

2006-02-19 Piotr Ozarowski <ozarow@gmail.com>
	* Language/tag renaming in preferences window is finally working

2006-02-18 Piotr Ozarowski <ozarow@gmail.com>
	* All language types are now saved
	* Code cleanups

2006-02-17 Piotr Ozarowski <ozarow@gmail.com>
	* Fixed saving languages
	* Polish translation updated
